# ECS-prototyping

./: CMakeLists.txt  ECS requirements.txt  README.md  TestComp.h  main.cpp
ECS/: Component.cpp  Component.h  ComponentArray.h  ComponentConcept.h  ComponentRegistryAlloc.h  ComponentRegistryFull.h  ECS.cpp  ECS.h  Entity.h  System.h
